--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,21 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
   </head>
 
-  <body>
-    <%= yield %>
+  <body class="bg-black text-white">
+    <main class="container mx-auto py-6 px-2 mb-32">
+      <header>
+        <h1 class="flex items-center text-lg mb-4 cursor-pointer font-semibold">
+          <%= image_tag "valorant-logo-white.png", alt: "logo", class: "w-6 h-6 mr-2" %>
+          Valorant Esports
+        </h1>
+      </header>
+
+      <%= yield %>
+    </main>
   </body>
 </html>
