--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -1,1 +1,84 @@
-<h1>Test Root</h1>
+<h1 class="pt-4 mb-4 text-3xl font-bold">경기 일정</h1>
+
+<div class="flex flex-col gap-6">
+  <div class="border-l-4 border-red-500 pl-4">
+    <div class="flex text-lg gap-4">
+      <div class="w-8 font-semibold text-neutral-500 self-center">A01</div>
+      <div class="flex items-center flex-1 gap-2 font-extrabold">
+        <div class="flex-1 flex items-center gap-4">
+          <%= image_tag "teams/sentinels.png", class: "h-8 inline-block" %>
+          <span class="flex-1">Sentinels</span>
+          <span class="mx-2">-</span>
+        </div>
+        <span class="font-medium text-neutral-500">vs</span>
+        <div class="flex-1 flex items-center gap-4 justify-end">
+          <span class="mx-2">-</span>
+          <span class="flex-1 text-right">NRG</span>
+          <%= image_tag "teams/nrg.png", class: "h-8 inline-block" %>
+        </div>
+      </div>
+      <div class="w-28 text-sm self-center text-right">11/24 07:00 PM</div>
+    </div>
+  </div>
+
+  <div class="border-l-4 border-red-500 pl-4">
+    <div class="flex items-center mb-2 gap-3">
+      <div class="inline-block h-2 w-2 rounded-full bg-red-800"></div>
+      <span class="font-semibold">LIVE</span>
+      <div class="border-b-2 border-red-800 flex-1"></div>
+    </div>
+    <div class="flex text-lg gap-4">
+      <div class="w-8 font-semibold text-neutral-500 self-center">A01</div>
+      <div class="flex items-center flex-1 gap-2 font-extrabold">
+        <div class="flex-1 flex items-center gap-4">
+          <%= image_tag "teams/sentinels.png", class: "h-8 inline-block" %>
+          <span class="flex-1">Sentinels</span>
+          <span class="mx-2">-</span>
+        </div>
+        <span class="font-medium text-neutral-500">vs</span>
+        <div class="flex-1 flex items-center gap-4 justify-end">
+          <span class="mx-2">-</span>
+          <span class="flex-1 text-right">NRG</span>
+          <%= image_tag "teams/nrg.png", class: "h-8 inline-block" %>
+        </div>
+      </div>
+      <div class="w-28 text-sm self-center text-right">11/24 07:00 PM</div>
+    </div>
+  </div>
+
+  <div class="flex text-lg gap-4 border-l-4 border-teal-500 pl-4">
+    <div class="w-8 font-semibold text-neutral-500 self-center">A02</div>
+    <div class="flex items-center flex-1 gap-2 font-extrabold">
+      <div class="flex-1 flex items-center gap-4 opacity-35">
+        <%= image_tag "teams/prx.png", class: "h-8 inline-block" %>
+        <span class="flex-1">Paper Rex</span>
+        <span class="mx-2">0</span>
+      </div>
+      <span class="font-medium text-neutral-500 self-center">vs</span>
+      <div class="flex-1 flex items-center gap-4 justify-end">
+        <span class="mx-2">2</span>
+        <span class="flex-1 text-right">Gen.G</span>
+        <%= image_tag "teams/gen-g.png", class: "h-8 inline-block" %>
+      </div>
+    </div>
+    <div class="w-28 text-sm self-center text-right">11/24 07:00 PM</div>
+  </div>
+
+  <div class="flex text-lg gap-4 border-l-4 border-teal-500 pl-4">
+    <div class="w-8 font-semibold text-neutral-500 self-center">A02</div>
+    <div class="flex items-center flex-1 gap-2 font-extrabold">
+      <div class="flex-1 flex items-center gap-4">
+        <%= image_tag "teams/gen-g.png", class: "h-8 inline-block" %>
+        <span class="flex-1">Gen.G</span>
+        <span class="mx-2">2</span>
+      </div>
+      <span class="font-medium text-neutral-500 self-center">vs</span>
+      <div class="flex-1 flex items-center gap-4 justify-end opacity-35">
+        <span class="mx-2">0</span>
+        <span class="flex-1 text-right">DRX</span>
+        <%= image_tag "teams/drx.png", class: "h-8 inline-block" %>
+      </div>
+    </div>
+    <div class="w-28 text-sm self-center text-right">11/24 07:00 PM</div>
+  </div>
+</div>
