--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= turbo_include_tags %>
     <%= hotwire_livereload_tags if Rails.env.development? %>
+
+    <meta name="view-transition" content="same-origin">
   </head>
 
   <body class="bg-black text-white">
